tigParse.output
Terminals unused in grammar

   EVENT
   OPTION
   OBJECT
   ENDL
   OR
   AND
   '*'
   '/'
   '%'
   UMINUS


Grammar

    0 $accept: program $end

    1 program: tigcode
    2        | %empty

    3 tigcode: statement
    4        | tigcode statement
    5        | dec_statement
    6        | tigcode dec_statement

    7 statement: PRINT expression ';'
    8          | assignment ';'
    9          | '{' statement_list '}'
   10          | END ';'
   11          | string_statement ';'
   12          | START_TIMER ';'
   13          | START_EVENT event_identifier AT INTEGER ';'
   14          | member_call ';'
   15          | func_call ';'
   16          | HOT STRING IDENTIFIER ';'
   17          | PURGE expression ',' expression ';'
   18          | RETURN return_expr ';'
   19          | IF '(' expression ')' statement
   20          | IF '(' expression ')' statement ELSE statement
   21          | FOR EACH var_or_obj_memb IN obj_expr statement
   22          | var_or_obj_memb ADD_ASSIGN expression ';'
   23          | BREAK ';'
   24          | MOVE obj_expr TO obj_expr ';'

   25 return_expr: expression
   26            | %empty

   27 assignment: var_or_obj_memb '=' expression

   28 var_or_obj_memb: variable_assignee
   29                | obj_member_assignee
   30                | element_assignee

   31 variable_assignee: IDENTIFIER

   32 obj_member_assignee: obj_expr '.' IDENTIFIER

   33 obj_expr: IDENTIFIER
   34         | member_expr
   35         | SELF

   36 element_assignee: var_or_obj_memb '[' array_index_expr ']'

   37 string_statement: string_literal
   38                 | string_literal '+' expression

   39 dec_statement: obj_identifier optional_member_list ';'
   40              | class_identifier obj_identifier optional_member_list ';'
   41              | level obj_identifier optional_member_list ';'
   42              | level class_identifier obj_identifier optional_member_list ';'
   43              | global_func_decl ';'

   44 level: ARROW
   45      | level ARROW

   46 obj_identifier: IDENTIFIER

   47 class_identifier: IDENTIFIER
   48                 | class_identifier IDENTIFIER

   49 $@1: %empty

   50 optional_member_list: HAS $@1 member_decl_list
   51                     | %empty

   52 member_decl_list: member_decl
   53                 | member_decl_list ',' member_decl

   54 member_decl: memb_decl_identifier
   55            | memb_decl_identifier '=' init_expr
   56            | memb_decl_identifier init_expr

   57 memb_decl_identifier: IDENTIFIER

   58 global_func_decl: func_indent '(' param_list ')' code_block

   59 init_expr: STRING
   60          | INTEGER
   61          | memb_function_def
   62          | obj_identifier
   63          | array_init_list

   64 memb_function_def: '(' param_list ')' code_block
   65                  | code_block

   66 statement_list: statement
   67               | statement_list statement

   68 string_literal: STRING

   69 event_identifier: IDENTIFIER

   70 code_block: '{' statement_list '}'

   71 expression: variable_expr
   72           | GETSTRING
   73           | expression '+' expression
   74           | expression '-' expression
   75           | member_expr
   76           | member_call
   77           | func_call
   78           | constant_expr
   79           | array_init_expr
   80           | array_element_expr
   81           | comparison_expr
   82           | '(' expression ')'
   83           | SELF
   84           | CHILDREN '(' obj_expr ')'
   85           | MAKE_HOT '(' expression ',' expression ',' expression ')'
   86           | NOTHING

   87 variable_expr: IDENTIFIER

   88 member_expr: obj_expr '.' IDENTIFIER

   89 member_call: obj_expr '.' func_indent '(' param_list ')'

   90 func_call: func_indent '(' param_list ')'

   91 func_indent: IDENTIFIER

   92 param_list: expression
   93           | param_list ',' expression
   94           | %empty

   95 constant_expr: integer_constant
   96              | STRING

   97 integer_constant: INTEGER

   98 array_init_expr: '[' constant_seq ']'

   99 array_init_list: '[' constant_seq ']'

  100 constant_seq: array_init_const
  101             | constant_seq ',' array_init_const

  102 array_init_const: STRING
  103                 | INTEGER
  104                 | obj_identifier

  105 array_element_expr: var_or_obj_memb '[' array_index_expr ']'

  106 array_index_expr: variable_expr
  107                 | integer_constant

  108 comparison_expr: expression EQ expression
  109                | expression '<' expression
  110                | expression LE expression
  111                | expression '>' expression
  112                | expression GE expression
  113                | expression NE expression


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'(' (40) 19 20 58 64 82 84 85 89 90
')' (41) 19 20 58 64 82 84 85 89 90
'*' (42)
'+' (43) 38 73
',' (44) 17 53 85 93 101
'-' (45) 74
'.' (46) 32 88 89
'/' (47)
';' (59) 7 8 10 11 12 13 14 15 16 17 18 22 23 24 39 40 41 42 43
'<' (60) 109
'=' (61) 27 55
'>' (62) 111
'[' (91) 36 98 99 105
']' (93) 36 98 99 105
'{' (123) 9 70
'}' (125) 9 70
error (256)
PRINT (258) 7
END (259) 10
RETURN (260) 18
EVENT (261)
OPTION (262)
OBJECT (263)
HAS (264) 50
ARROW (265) 44 45
GETSTRING (266) 72
HOT (267) 16
MAKE_HOT (268) 85
PURGE (269) 17
START_TIMER (270) 12
START_EVENT (271) 13
AT (272) 13
INTEGER (273) 13 60 97 103
IDENTIFIER (274) 16 31 32 33 46 47 48 57 69 87 88 91
STRING (275) 16 59 68 96 102
ENDL (276)
IF (277) 19 20
FOR (278) 21
EACH (279) 21
IN (280) 21
SELF (281) 35 83
CHILDREN (282) 84
ADD_ASSIGN (283) 22
BREAK (284) 23
NOTHING (285) 86
MOVE (286) 24
TO (287) 24
EQ (288) 108
NE (289) 113
GE (290) 112
LE (291) 110
OR (292)
AND (293)
UMINUS (294)
IFX (295)
ELSE (296) 20


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1 2, on right: 0
tigcode (61)
    on left: 3 4 5 6, on right: 1 4 6
statement (62)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24, on right:
    3 4 19 20 21 66 67
return_expr (63)
    on left: 25 26, on right: 18
assignment (64)
    on left: 27, on right: 8
var_or_obj_memb (65)
    on left: 28 29 30, on right: 21 22 27 36 105
variable_assignee (66)
    on left: 31, on right: 28
obj_member_assignee (67)
    on left: 32, on right: 29
obj_expr (68)
    on left: 33 34 35, on right: 21 24 32 84 88 89
element_assignee (69)
    on left: 36, on right: 30
string_statement (70)
    on left: 37 38, on right: 11
dec_statement (71)
    on left: 39 40 41 42 43, on right: 5 6
level (72)
    on left: 44 45, on right: 41 42 45
obj_identifier (73)
    on left: 46, on right: 39 40 41 42 62 104
class_identifier (74)
    on left: 47 48, on right: 40 42 48
optional_member_list (75)
    on left: 50 51, on right: 39 40 41 42
$@1 (76)
    on left: 49, on right: 50
member_decl_list (77)
    on left: 52 53, on right: 50 53
member_decl (78)
    on left: 54 55 56, on right: 52 53
memb_decl_identifier (79)
    on left: 57, on right: 54 55 56
global_func_decl (80)
    on left: 58, on right: 43
init_expr (81)
    on left: 59 60 61 62 63, on right: 55 56
memb_function_def (82)
    on left: 64 65, on right: 61
statement_list (83)
    on left: 66 67, on right: 9 67 70
string_literal (84)
    on left: 68, on right: 37 38
event_identifier (85)
    on left: 69, on right: 13
code_block (86)
    on left: 70, on right: 58 64 65
expression (87)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86, on right:
    7 17 19 20 22 25 27 38 73 74 82 85 92 93 108 109 110 111 112 113
variable_expr (88)
    on left: 87, on right: 71 106
member_expr (89)
    on left: 88, on right: 34 75
member_call (90)
    on left: 89, on right: 14 76
func_call (91)
    on left: 90, on right: 15 77
func_indent (92)
    on left: 91, on right: 58 89 90
param_list (93)
    on left: 92 93 94, on right: 58 64 89 90 93
constant_expr (94)
    on left: 95 96, on right: 78
integer_constant (95)
    on left: 97, on right: 95 107
array_init_expr (96)
    on left: 98, on right: 79
array_init_list (97)
    on left: 99, on right: 63
constant_seq (98)
    on left: 100 101, on right: 98 99 101
array_init_const (99)
    on left: 102 103 104, on right: 100 101
array_element_expr (100)
    on left: 105, on right: 80
array_index_expr (101)
    on left: 106 107, on right: 36 105
comparison_expr (102)
    on left: 108 109 110 111 112 113, on right: 81


State 0

    0 $accept: . program $end

    PRINT        shift, and go to state 1
    END          shift, and go to state 2
    RETURN       shift, and go to state 3
    ARROW        shift, and go to state 4
    HOT          shift, and go to state 5
    PURGE        shift, and go to state 6
    START_TIMER  shift, and go to state 7
    START_EVENT  shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    STRING       shift, and go to state 10
    IF           shift, and go to state 11
    FOR          shift, and go to state 12
    SELF         shift, and go to state 13
    BREAK        shift, and go to state 14
    MOVE         shift, and go to state 15
    '{'          shift, and go to state 16

    $default  reduce using rule 2 (program)

    program              go to state 17
    tigcode              go to state 18
    statement            go to state 19
    assignment           go to state 20
    var_or_obj_memb      go to state 21
    variable_assignee    go to state 22
    obj_member_assignee  go to state 23
    obj_expr             go to state 24
    element_assignee     go to state 25
    string_statement     go to state 26
    dec_statement        go to state 27
    level                go to state 28
    obj_identifier       go to state 29
    class_identifier     go to state 30
    global_func_decl     go to state 31
    string_literal       go to state 32
    member_expr          go to state 33
    member_call          go to state 34
    func_call            go to state 35
    func_indent          go to state 36


State 1

    7 statement: PRINT . expression ';'

    GETSTRING   shift, and go to state 37
    MAKE_HOT    shift, and go to state 38
    INTEGER     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    STRING      shift, and go to state 41
    SELF        shift, and go to state 42
    CHILDREN    shift, and go to state 43
    NOTHING     shift, and go to state 44
    '('         shift, and go to state 45
    '['         shift, and go to state 46

    var_or_obj_memb      go to state 47
    variable_assignee    go to state 22
    obj_member_assignee  go to state 23
    obj_expr             go to state 24
    element_assignee     go to state 25
    expression           go to state 48
    variable_expr        go to state 49
    member_expr          go to state 50
    member_call          go to state 51
    func_call            go to state 52
    func_indent          go to state 53
    constant_expr        go to state 54
    integer_constant     go to state 55
    array_init_expr      go to state 56
    array_element_expr   go to state 57
    comparison_expr      go to state 58


State 2

   10 statement: END . ';'

    ';'  shift, and go to state 59


State 3

   18 statement: RETURN . return_expr ';'

    GETSTRING   shift, and go to state 37
    MAKE_HOT    shift, and go to state 38
    INTEGER     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    STRING      shift, and go to state 41
    SELF        shift, and go to state 42
    CHILDREN    shift, and go to state 43
    NOTHING     shift, and go to state 44
    '('         shift, and go to state 45
    '['         shift, and go to state 46

    $default  reduce using rule 26 (return_expr)

    return_expr          go to state 60
    var_or_obj_memb      go to state 47
    variable_assignee    go to state 22
    obj_member_assignee  go to state 23
    obj_expr             go to state 24
    element_assignee     go to state 25
    expression           go to state 61
    variable_expr        go to state 49
    member_expr          go to state 50
    member_call          go to state 51
    func_call            go to state 52
    func_indent          go to state 53
    constant_expr        go to state 54
    integer_constant     go to state 55
    array_init_expr      go to state 56
    array_element_expr   go to state 57
    comparison_expr      go to state 58


State 4

   44 level: ARROW .

    $default  reduce using rule 44 (level)


State 5

   16 statement: HOT . STRING IDENTIFIER ';'

    STRING  shift, and go to state 62


State 6

   17 statement: PURGE . expression ',' expression ';'

    GETSTRING   shift, and go to state 37
    MAKE_HOT    shift, and go to state 38
    INTEGER     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    STRING      shift, and go to state 41
    SELF        shift, and go to state 42
    CHILDREN    shift, and go to state 43
    NOTHING     shift, and go to state 44
    '('         shift, and go to state 45
    '['         shift, and go to state 46

    var_or_obj_memb      go to state 47
    variable_assignee    go to state 22
    obj_member_assignee  go to state 23
    obj_expr             go to state 24
    element_assignee     go to state 25
    expression           go to state 63
    variable_expr        go to state 49
    member_expr          go to state 50
    member_call          go to state 51
    func_call            go to state 52
    func_indent          go to state 53
    constant_expr        go to state 54
    integer_constant     go to state 55
    array_init_expr      go to state 56
    array_element_expr   go to state 57
    comparison_expr      go to state 58


State 7

   12 statement: START_TIMER . ';'

    ';'  shift, and go to state 64


State 8

   13 statement: START_EVENT . event_identifier AT INTEGER ';'

    IDENTIFIER  shift, and go to state 65

    event_identifier  go to state 66


State 9

   31 variable_assignee: IDENTIFIER .
   33 obj_expr: IDENTIFIER .
   46 obj_identifier: IDENTIFIER .
   47 class_identifier: IDENTIFIER .
   91 func_indent: IDENTIFIER .

    HAS         reduce using rule 46 (obj_identifier)
    IDENTIFIER  reduce using rule 47 (class_identifier)
    ';'         reduce using rule 46 (obj_identifier)
    '('         reduce using rule 91 (func_indent)
    '.'         reduce using rule 33 (obj_expr)
    $default    reduce using rule 31 (variable_assignee)


State 10

   68 string_literal: STRING .

    $default  reduce using rule 68 (string_literal)


State 11

   19 statement: IF . '(' expression ')' statement
   20          | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 67


State 12

   21 statement: FOR . EACH var_or_obj_memb IN obj_expr statement

    EACH  shift, and go to state 68


State 13

   35 obj_expr: SELF .

    $default  reduce using rule 35 (obj_expr)


State 14

   23 statement: BREAK . ';'

    ';'  shift, and go to state 69


State 15

   24 statement: MOVE . obj_expr TO obj_expr ';'

    IDENTIFIER  shift, and go to state 70
    SELF        shift, and go to state 13

    obj_expr     go to state 71
    member_expr  go to state 33


State 16

    9 statement: '{' . statement_list '}'

    PRINT        shift, and go to state 1
    END          shift, and go to state 2
    RETURN       shift, and go to state 3
    HOT          shift, and go to state 5
    PURGE        shift, and go to state 6
    START_TIMER  shift, and go to state 7
    START_EVENT  shift, and go to state 8
    IDENTIFIER   shift, and go to state 72
    STRING       shift, and go to state 10
    IF           shift, and go to state 11
    FOR          shift, and go to state 12
    SELF         shift, and go to state 13
    BREAK        shift, and go to state 14
    MOVE         shift, and go to state 15
    '{'          shift, and go to state 16

    statement            go to state 73
    assignment           go to state 20
    var_or_obj_memb      go to state 21
    variable_assignee    go to state 22
    obj_member_assignee  go to state 23
    obj_expr             go to state 24
    element_assignee     go to state 25
    string_statement     go to state 26
    statement_list       go to state 74
    string_literal       go to state 32
    member_expr          go to state 33
    member_call          go to state 34
    func_call            go to state 35
    func_indent          go to state 53


State 17

    0 $accept: program . $end

    $end  shift, and go to state 75


State 18

    1 program: tigcode .
    4 tigcode: tigcode . statement
    6        | tigcode . dec_statement

    PRINT        shift, and go to state 1
    END          shift, and go to state 2
    RETURN       shift, and go to state 3
    ARROW        shift, and go to state 4
    HOT          shift, and go to state 5
    PURGE        shift, and go to state 6
    START_TIMER  shift, and go to state 7
    START_EVENT  shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    STRING       shift, and go to state 10
    IF           shift, and go to state 11
    FOR          shift, and go to state 12
    SELF         shift, and go to state 13
    BREAK        shift, and go to state 14
    MOVE         shift, and go to state 15
    '{'          shift, and go to state 16

    $default  reduce using rule 1 (program)

    statement            go to state 76
    assignment           go to state 20
    var_or_obj_memb      go to state 21
    variable_assignee    go to state 22
    obj_member_assignee  go to state 23
    obj_expr             go to state 24
    element_assignee     go to state 25
    string_statement     go to state 26
    dec_statement        go to state 77
    level                go to state 28
    obj_identifier       go to state 29
    class_identifier     go to state 30
    global_func_decl     go to state 31
    string_literal       go to state 32
    member_expr          go to state 33
    member_call          go to state 34
    func_call            go to state 35
    func_indent          go to state 36


State 19

    3 tigcode: statement .

    $default  reduce using rule 3 (tigcode)


State 20

    8 statement: assignment . ';'

    ';'  shift, and go to state 78


State 21

   22 statement: var_or_obj_memb . ADD_ASSIGN expression ';'
   27 assignment: var_or_obj_memb . '=' expression
   36 element_assignee: var_or_obj_memb . '[' array_index_expr ']'

    ADD_ASSIGN  shift, and go to state 79
    '='         shift, and go to state 80
    '['         shift, and go to state 81


State 22

   28 var_or_obj_memb: variable_assignee .

    $default  reduce using rule 28 (var_or_obj_memb)


State 23

   29 var_or_obj_memb: obj_member_assignee .

    $default  reduce using rule 29 (var_or_obj_memb)


State 24

   32 obj_member_assignee: obj_expr . '.' IDENTIFIER
   88 member_expr: obj_expr . '.' IDENTIFIER
   89 member_call: obj_expr . '.' func_indent '(' param_list ')'

    '.'  shift, and go to state 82


State 25

   30 var_or_obj_memb: element_assignee .

    $default  reduce using rule 30 (var_or_obj_memb)


State 26

   11 statement: string_statement . ';'

    ';'  shift, and go to state 83


State 27

    5 tigcode: dec_statement .

    $default  reduce using rule 5 (tigcode)


State 28

   41 dec_statement: level . obj_identifier optional_member_list ';'
   42              | level . class_identifier obj_identifier optional_member_list ';'
   45 level: level . ARROW

    ARROW       shift, and go to state 84
    IDENTIFIER  shift, and go to state 85

    obj_identifier    go to state 86
    class_identifier  go to state 87


State 29

   39 dec_statement: obj_identifier . optional_member_list ';'

    HAS  shift, and go to state 88

